1-infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mwtback.aiops
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aiops-backend-service
            port:
              number: 3001
  - host: myworldtravel.aiops
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aiops-frontend-service
            port:
              number: 8080
  - host: chromadb.aiops
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chromadb-service
            port:
              number: 8000
